--- a/app/src/main/res/layout/activity_scroll.xml
+++ b/app/src/main/res/layout/activity_scroll.xml
@@ -30,6 +30,6 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/my_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"/>
+        android:layout_height="match_parent"/>
 
 </com.example.xiangnanzhang.smarttab.InviteNewLinearLayout>
